# payd-labs-sentinel-v1

./: .gitignore  DEPLOY.md  README.md  SELFHOST.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml  setup-server.yml
deploy/: .env.example.selfhost  docker-compose.selfhost.yml
sentinel-api/: .env.example  Dockerfile  alembic.ini  requirements.txt
sentinel-api/alembic/: env.py
sentinel-api/app/: auth.py  config.py  database.py  main.py
sentinel-api/app/models/: __init__.py  audit_log.py  custom_domain.py  deployment.py  metrics_snapshot.py  project.py  user.py
sentinel-api/app/schemas/: auth.py  custom_domain.py  dashboard.py  database.py  deployment.py  domain.py  logs.py  project.py  security.py  service.py  setup.py  system.py  wizard.py
sentinel-api/app/services/: audit_service.py  auth_log_service.py  caddy_service.py  db_service.py  deploy_service.py  docker_service.py  fail2ban_service.py  instance_config.py  log_service.py  metrics_service.py  project_service.py  wizard_service.py
sentinel-api/app/tasks/: scheduler.py
sentinel-api/deploy/: entrypoint.sh
sentinel-cli/: README.md  pyproject.toml
sentinel-cli/sentinel_cli/: __init__.py  auth.py  cli.py  client.py  config.py  mcp_server.py
sentinel-ui/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
sentinel-ui/src/: App.vue  env.d.ts  main.ts
sentinel-ui/src/composables/: useCodeHighlight.ts  useDarkMode.ts  useTheme.ts
sentinel-ui/src/router/: index.ts
sentinel-ui/src/services/: api.ts  audit.ts  auth.ts  customDomains.ts  dashboard.ts  (+10 more)
(+66 files in other folders)
