[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-cli"
version = "0.1.0"
description = "CLI and MCP server for Sentinel DevOps portal"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
sentinel = "sentinel_cli.cli:app"
sentinel-mcp = "sentinel_cli.mcp_server:main"
